--- a/My Website/index.html
+++ b/My Website/index.html
@@ -35,7 +35,7 @@ It always seems impossible, until it’s done.</p>
 
 				<p>You can find his projects below</p>
 						<li class="highlighted1"><a href="Intro to IxD presentation CIID.pdf">the PLOW</a></li>
-						<li class="highlighted"><a href="Fomo_Nomo_Nina_Ana_Kosuke_Yoshio.mp4">FOMONOMO</a></li>
+						<li class="highlighted">FOMONOMO</li>
 				</p1>
 
 				<h2>This is a level two heading.</h2>
